# Cheetah-Software-GIDDP

./: .gitignore  CMakeLists.txt  README.md
common/include/Dynamics/: MiniCheetah.h
common/include/SimUtilities/: VisualizationData.h
config/: mini-cheetah-defaults.yaml
lcm-types/: giddp_command_lcmt.lcm  giddp_data_lcmt.lcm
lcm_replay/: Dev-log.md  Readme.md  control_param_responder.py  debug1.csv  debug2.csv  debug3.csv  debugscript.py  debugtrimlog.py  inject_visual_data_from_sim_log.py  lcm_log_and_align  sim_time_aligner.py  trimed_slowmpc  trimed_slowmpc_align
scripts/: find_qt_path.sh
sim/: CMakeLists.txt
sim/include/: Simulation.h
sim/src/: Graphics3D.cpp  Simulation.cpp
user/Imitation_Controller/: Imitation_Controller.cpp  Imitation_Controller.hpp
user/MIT_Controller/Controllers/convexMPC/: SolverMPC.cpp
user/MIT_Controller/FSM_States/: FSM_State_Locomotion.cpp
